<resources>
    <string name="app_name">"Reminder"</string>
    <string name="app_name_pro">"Reminder PRO"</string>
    <string name="action_settings">"Settings"</string>
    <string name="drawer_active_reminder">Reminders</string>
    <string name="drawer_archive_reminder">Trash</string>
    <string name="copyright">"2015 \u00A9 Nazar Suhovych"</string>
    <string name="button_close">"Close"</string>
    <string name="menu_send_feedback">"Send feedback"</string>
    <string name="tast_hint">"Tasks"</string>
    <string name="phone_number_hint">"Phone number"</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">"Cancel"</string>
    <string name="theme_title">"Application theme"</string>
    <string name="theme_descr">"Choose a theme for the application"</string>
    <string name="menu_about">"About"</string>
    <string name="press_again">"Press again to exit"</string>
    <string name="delete_all">"Clear trash"</string>
    <string name="save_reminder">"Save reminder"</string>
    <string name="must_click_message">"You must press one of button!"</string>
    <string name="geo_fragment">"Locations"</string>
    <string name="load_contats">"Loading contacts list"</string>
    <string name="loading_wait">"Please wait …"</string>
    <string name="contact_dialog_title">"Select a contact"</string>
    <string name="meter">" m"</string>
    <string name="disable_notif_title">"Destination distance notification"</string>
    <string name="disable_notif_description">"Check to activate distance notification"</string>
    <string name="radius_title">"Destination radius"</string>
    <string name="radius_description">"Select the distance to the destination at which the application remind"</string>
    <string name="map_type_title">"Select type of map"</string>
    <string name="gps_title">"GPS"</string>
    <string name="gps_text">"GPS is not enabled. Do you want to go to the settings?"</string>
    <string name="select_radius">"Select a radius"</string>
    <string name="point_warning">"Select a point on the map"</string>
    <string name="vibration_title">"Vibration when reminded"</string>
    <string name="vibration_explanation">"Check to enable vibration"</string>
    <string name="interface_block">"General"</string>
    <string name="sound_title">"The sound in silent mode"</string>
    <string name="sound_explanation">"Check to enable sound in silent mode"</string>
    <string name="wake_title">"Awake screen"</string>
    <string name="wake_explanation">"Check to awaken the screen when reminded"</string>
    <string name="rem_sound">"Reminder melody"</string>
    <string name="sound_default">"Standard"</string>
    <string name="sound_custom">"Melody"</string>
    <string name="sounds_dialog_title">"Select a reminder melody"</string>
    <string name="sounds_loading_text">"Loading list of music files"</string>
    <string name="sound_type_dialog_title">"Select the type of melody"</string>
    <string name="no_music">"We have not found any music file"</string>
    <string name="sync_title">"Synchronization"</string>
    <string name="number_error">"Enter a phone number"</string>
    <string name="infinite_title">"Endless Melody"</string>
    <string name="infinite_explanation">"Select to enable playing tunes by the time asking the user"</string>
    <string name="message_field_hint">"Message"</string>
    <string name="silent_sms_explanation">"Check if you want to automatically send SMS"</string>
    <string name="silent_sms_title">"\"Silent\" SMS"</string>
    <string name="message_empty_error">"Message cannot be empty"</string>
    <string name="dialog_button_send">"Send"</string>
    <string name="dialog_message_sent">"Message sended"</string>
    <string name="message_send_error">"Error sending message"</string>
    <string name="dialog_button_retry">"Retry"</string>
    <string name="reminder_make_call">"Call"</string>
    <string name="reminder_type">"Reminder"</string>
    <string name="reminder_send_message">"SMS"</string>
    <string name="interval_zero">"0"</string>
    <string name="string_year">"1Y"</string>
    <string name="string_day">"1D"</string>
    <string name="string_week">"1W"</string>
    <string name="string__month">"1M"</string>
    <string name="string_min">"1 minute"</string>
    <string name="string_five_min">"5 minutes"</string>
    <string name="string_tem_min">"10 minutes"</string>
    <string name="string_half_hour">"30 minutes"</string>
    <string name="string_hour">"1H"</string>
    <string name="string_two_hours">"2H"</string>
    <string name="string_five_hours">"5H"</string>
    <string name="swipe_delete">"Removed"</string>
    <string name="calendar_fragment">"Calendar"</string>
    <string name="add_birthday_button">"New birthday"</string>
    <string name="select_item_warming">"Please check one of the items"</string>
    <string name="birthday_settings">"Birthdays"</string>
    <string name="notification_settings">"Notifications"</string>
    <string name="location_settings">"Location"</string>
    <string name="other_settings">"Other"</string>
    <string name="first_day_dialog_title">"Select the first day of the week"</string>
    <string name="start_day_sunday">"Sunday"</string>
    <string name="start_day_monday">"Monday"</string>
    <string name="days_to_dialog_title">"Days before birth"</string>
    <string name="birthdays_option">"Contacts birthdays"</string>
    <string name="start_day_of_week_title">"The first day of the week"</string>
    <string name="days_to_title">"Days to birthday"</string>
    <string name="days_to_explanation">"Select how many days to report about birthday"</string>
    <string name="scan_contacts">"Check contacts for new birthdays"</string>
    <string name="checking_new_birthdays_title">"Check for new birthdays"</string>
    <string name="rate_dialog_text">"Do you want rate application?"</string>
    <string name="rate_button_never">"Never"</string>
    <string name="rate_button_later">"Later"</string>
    <string name="attach_contact_check">"Link a contact"</string>
    <string name="birthday_name_hint">"Name / Surname"</string>
    <string name="empty_field_error">"There should not be empty"</string>
    <string name="birthday_reminder_time">"Remind of birthdays at:"</string>
    <string name="years_string">" y."</string>
    <string name="choose_date_title">"Select your date of birth:"</string>
    <string name="select_contact_button">"Choose a contact"</string>
    <string name="import_dialog_button_yes">"Yes"</string>
    <string name="import_dialog_button_no">"No"</string>
    <string name="found_word">"Found"</string>
    <string name="birthdays_word">"new birthdays"</string>
    <string name="nothing_found">"Nothing found"</string>
    <string name="settings_places">"Places"</string>
    <string name="skip_button">"Skip"</string>
    <string name="next_button">"More"</string>
    <string name="settings_delay_title">"Delay time"</string>
    <string name="settings_delay_explanation">"Select the number of minutes for which reminder will delayed"</string>
    <string name="delay_dialog_title">"Select the number of minutes"</string>
    <string name="search_hint">"Search"</string>
    <string name="select_phone_number_title">"Select a telephone number"</string>
    <string name="settings_dark_theme_explanation">"Select to turn on dark design for application"</string>
    <string name="settings_dark_theme_title">"Dark theme"</string>
    <string name="widget_empty_list">"Currently you have no active reminders."</string>
    <string name="header_bg_text">"Header background color: "</string>
    <string name="header_text_color_title">"Date color: "</string>
    <string name="black_radio_text">"Black"</string>
    <string name="white_radio_text">"White"</string>
    <string name="widget_bg_color_title">"Background color"</string>
    <string name="current_widget_label">"Active reminders"</string>
    <string name="add_reminder_widget_label">"Add Reminder"</string>
    <string name="select_widget_bg_color">"Choose a background color: "</string>
    <string name="add_birthday_widget_label">"Add Birthday"</string>
    <string name="splash_info">"Please wait. The application is loading."</string>
    <string name="add_reminder_dialog_title">"Add reminder"</string>
    <string name="quick_reminder_label">"Quick Reminder"</string>
    <string name="new_place_title">"New location"</string>
    <string name="enter_name_hint">"Enter the name"</string>
    <string name="empty_places_list_text">"You do not have the list of frequently used locations. Click on the 'Plus' to add new one."</string>
    <string name="delete_place_toast">"Was removed from the list"</string>
    <string name="save_dialog_button">"Save"</string>
    <string name="edit_birthday_title">"Edit birthday"</string>
    <string name="auto_scan_settings_title">"Automatically scans"</string>
    <string name="auto_scan_settings_explanation">"Auto scan for new birthdays at startup"</string>
    <string name="action_check_text">"Add action"</string>
    <string name="led_color_explanation">"Choose a color light indication"</string>
    <string name="led_color_title">"Indicator color"</string>
    <string name="led_explanation">"Select to enable light indication when reminded"</string>
    <string name="led_title">"LED indication"</string>
    <string name="birthday_settings_notification">"Notification settings"</string>
    <string name="settings_global_explanation">"Select to use the global setting reminders for birthdays"</string>
    <string name="settings_global_title">"Global settings"</string>
    <string name="infinite_vibrate_title">"Endless vibration"</string>
    <string name="infinite_vibrate_explanation">"Select to enable vibration infinite"</string>
    <string name="voice_block">"Voice control"</string>
    <string name="widget_birthdays_explanation">Check to enable showing birthdays for next 7 days in active reminders widget</string>
    <string name="widget_birthdays_title">Widget birthdays</string>
    <string name="permanent_notification_title">Show notification</string>
    <string name="settings_voice_language_title">Language</string>
    <string name="custom_melody_title">Melody</string>
    <string name="custom_radius_title">Radius</string>
    <string name="edit_dialog_button">Edit</string>
    <string name="menu_led_color">LED color</string>
    <string name="menu_order_by">Sort</string>
    <string name="settings_tts_explanation">Check to enable reminder voice notification</string>
    <string name="settings_tts_title">Voice notification</string>
    <string name="simple_filter">Filter</string>
    <string name="simple_disabled">Done</string>
    <string name="string_cloud_connecting">Cloud Sync</string>
    <string name="string_cloud_connecting_explanation">For storing data on cloud drive, connect to yours</string>
    <string name="string_connect_to_google_drive">Connect to Google Drive</string>
    <string name="string_connect_to_dropbox">Connect to Dropbox</string>
    <string name="string_connection_explanation">To manage connections go to Settings > Export &amp; Synchronization > External services</string>
    <string name="string_import_contacts">Also import birthdays from contacts</string>
    <string name="string_delete_selected">Delete selected</string>
    <string name="string_backup_birthdays">Backup birthdays</string>
    <string name="string_backup_birthdays_explanation">Check, to enable backing up birthdays when sync reminders</string>
    <string name="settings_birthday_reminder_explanation">Check to enable reminder for birthdays</string>
    <string name="settings_birthday_reminder_title">Birthday reminder</string>
    <string name="exit">Exit</string>
    <string name="show_grid">Grid view</string>
    <string name="birthday_permanent_explanation">Check to enable showing upcoming birthdays in status bar</string>
</resources>