<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/settings_margin"
        android:layout_marginRight="@dimen/settings_margin"
        android:layout_height="wrap_content">

        <com.cray.software.justreminder.views.PrefsView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/globalOptionPrefs"
            app:prefs_primary_text="@string/settings_global_title"
            app:prefs_secondary_text="@string/settings_global_explanation"
            app:prefs_divider_top="false"
            app:prefs_type="check"
            app:prefs_divider_bottom="true"/>

        <com.cray.software.justreminder.views.PrefsView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/vibrationOptionPrefs"
            app:prefs_primary_text="@string/vibration_title"
            app:prefs_secondary_text="@string/vibration_explanation"
            app:prefs_divider_top="false"
            app:prefs_type="check"
            app:prefs_divider_bottom="true"/>

        <com.cray.software.justreminder.views.PrefsView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/infiniteVibrateOptionPrefs"
            app:prefs_primary_text="@string/infinite_vibrate_title"
            app:prefs_secondary_text="@string/infinite_vibrate_explanation"
            app:prefs_divider_top="false"
            app:prefs_type="check"
            app:prefs_divider_bottom="true"/>

        <com.cray.software.justreminder.views.PrefsView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/soundOptionPrefs"
            app:prefs_primary_text="@string/sound_title"
            app:prefs_secondary_text="@string/sound_explanation"
            app:prefs_divider_top="false"
            app:prefs_type="check"
            app:prefs_divider_bottom="true"/>

        <com.cray.software.justreminder.views.PrefsView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/infiniteSoundOptionPrefs"
            app:prefs_primary_text="@string/infinite_title"
            app:prefs_secondary_text="@string/infinite_explanation"
            app:prefs_divider_top="false"
            app:prefs_type="check"
            app:prefs_divider_bottom="true"/>

        <com.cray.software.justreminder.views.PrefsView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/wakeScreenOptionPrefs"
            app:prefs_primary_text="@string/wake_title"
            app:prefs_secondary_text="@string/wake_explanation"
            app:prefs_divider_top="false"
            app:prefs_type="check"
            app:prefs_divider_bottom="true"/>

        <com.cray.software.justreminder.views.PrefsView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chooseSoundPrefs"
            app:prefs_primary_text="@string/rem_sound"
            app:prefs_divider_top="false"
            app:prefs_type="none"
            app:prefs_divider_bottom="true"/>

        <com.cray.software.justreminder.views.PrefsView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ttsPrefs"
            app:prefs_primary_text="@string/settings_tts_title"
            app:prefs_secondary_text="@string/settings_tts_explanation"
            app:prefs_divider_top="false"
            app:prefs_type="check"
            app:prefs_divider_bottom="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/settings_voice_language_title"
            android:id="@+id/locale"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:textSize="@dimen/settings_text_size_primary" />

        <com.cray.software.justreminder.views.PrefsView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ledPrefs"
            app:prefs_primary_text="@string/led_title"
            app:prefs_secondary_text="@string/led_explanation"
            app:prefs_divider_top="true"
            app:prefs_type="check"
            app:prefs_divider_bottom="true"/>

        <com.cray.software.justreminder.views.PrefsView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chooseLedColorPrefs"
            app:prefs_primary_text="@string/led_color_title"
            app:prefs_secondary_text="@string/led_color_explanation"
            app:prefs_divider_top="false"
            app:prefs_type="none"
            app:prefs_divider_bottom="false"/>

    </LinearLayout>

</ScrollView>
