<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.hexrain.design.ScreenManager">

    <item android:id="@+id/action_voice"
        android:title="@string/voice_block"
        android:icon="@drawable/ic_mic_white_24dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_list"
        android:title="@string/show_grid"
        android:icon="@drawable/ic_view_quilt_white_24dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_refresh"
        android:title="@string/sync_title"
        android:icon="@drawable/ic_cached_white_24dp"
        app:showAsAction="never" />

    <item android:id="@+id/action_order"
        android:title="@string/menu_order_by"
        android:icon="@drawable/ic_sort_white_24dp"
        app:showAsAction="never" />

    <item android:id="@+id/action_filter"
        android:title="@string/simple_filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        app:showAsAction="never" />

    <item android:id="@+id/action_exit"
        android:title="@string/exit"
        app:showAsAction="never" />
</menu>
