<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginLeft="@dimen/settings_margin"
    android:layout_marginRight="@dimen/settings_margin"
    android:layout_height="wrap_content">

    <com.cray.software.justreminder.views.PrefsView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/birthReminderPrefs"
        app:prefs_primary_text="@string/settings_birthday_reminder_title"
        app:prefs_secondary_text="@string/settings_birthday_reminder_explanation"
        app:prefs_divider_top="false"
        app:prefs_type="check"
        app:prefs_divider_bottom="true"/>

    <com.cray.software.justreminder.views.PrefsView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/widgetShowPrefs"
        app:prefs_primary_text="@string/widget_birthdays_title"
        app:prefs_secondary_text="@string/widget_birthdays_explanation"
        app:prefs_divider_top="false"
        app:prefs_type="check"
        app:prefs_divider_bottom="true"/>

    <com.cray.software.justreminder.views.PrefsView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/birthdayPermanentPrefs"
        app:prefs_primary_text="@string/permanent_notification_title"
        app:prefs_secondary_text="@string/birthday_permanent_explanation"
        app:prefs_divider_top="false"
        app:prefs_type="check"
        app:prefs_divider_bottom="true"/>

    <com.cray.software.justreminder.views.PrefsView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/daysToPrefs"
        app:prefs_primary_text="@string/days_to_title"
        app:prefs_secondary_text="@string/days_to_explanation"
        app:prefs_divider_top="false"
        app:prefs_type="text"
        app:prefs_divider_bottom="true"/>

    <RelativeLayout
        android:id="@+id/reminderTime"
        android:layout_width="match_parent"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toLeftOf="@+id/reminderTimeText">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/birthday_reminder_time"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:textSize="@dimen/settings_text_size_primary"
                android:paddingBottom="15dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/reminderTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:textSize="@dimen/settings_text_size_primary"
            android:text="12:00"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <com.cray.software.justreminder.views.PrefsView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/backupBirthPrefs"
        app:prefs_primary_text="@string/string_backup_birthdays"
        app:prefs_secondary_text="@string/string_backup_birthdays_explanation"
        app:prefs_divider_top="false"
        app:prefs_type="check"
        app:prefs_divider_bottom="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/birthdayNotifContainer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/birthday_settings_notification"
                android:id="@+id/birthdayNotification"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:textSize="@dimen/settings_text_size_primary" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/useContacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/birthdays_option"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:clickable="false"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:layout_toLeftOf="@+id/contactsSwitch"
            android:textSize="@dimen/settings_text_size_primary" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/contactsSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:clickable="false"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <com.cray.software.justreminder.views.PrefsView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/autoScanPrefs"
        app:prefs_primary_text="@string/auto_scan_settings_title"
        app:prefs_secondary_text="@string/auto_scan_settings_explanation"
        app:prefs_divider_top="false"
        app:prefs_type="check"
        app:prefs_divider_bottom="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/scan_contacts"
        android:id="@+id/contactsScan"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:textSize="@dimen/settings_text_size_primary" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

</LinearLayout>
    </ScrollView>