<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cray.software.justreminder.app.MainActivity" >

    <item android:id="@+id/action_custom_melody"
        android:title="@string/custom_melody_title"
        android:icon="@drawable/ic_music_note_white_24dp"
        app:showAsAction="never" />

    <item android:id="@+id/action_custom_radius"
        android:title="@string/custom_radius_title"
        android:visible="false"
        app:showAsAction="never" />

    <item android:id="@+id/action_custom_color"
        android:title="@string/menu_led_color"
        android:visible="false"
        app:showAsAction="never" />

</menu>