<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_title"
        android:title="Selected"
        app:showAsAction="withText" />

    <item android:id="@+id/action_disable"
        android:title="@string/simple_disabled"
        android:icon="@drawable/ic_done_white_24dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_edit"
        android:title="@string/edit_dialog_button"
        android:icon="@drawable/ic_create_white_24dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_delete"
        android:title="@string/string_delete_selected"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="ifRoom" />
</menu>